--- a/ConsulAndOcelot.Demo.ServerB/ConsulAndOcelot.Demo.ServerB.csproj
+++ b/ConsulAndOcelot.Demo.ServerB/ConsulAndOcelot.Demo.ServerB.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Consul" Version="1.6.10.3" />
+    <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="3.0.1" />
     <PackageReference Include="Polly" Version="7.2.2" />
   </ItemGroup>
 
